--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ bleach==3.1.0
 boto3==1.9.196
 botocore==1.12.234
 celery==4.4.0rc1
-certifi==2019.6.16
+certifi==2019.11.28
 cffi==1.12.3
 chardet==3.0.4
 Click==7.0
@@ -17,7 +17,9 @@ cryptography==2.7
 cycler==0.10.0
 Cython==0.29.13
 dash==1.6.0
+dash-bootstrap-components==0.7.2
 dash-core-components==1.5.0
+dash-cytoscape==0.1.1
 dash-daq==0.3.0
 dash-html-components==1.0.1
 dash-renderer==1.2.0
@@ -80,7 +82,7 @@ python-dotenv==0.10.3
 pytz==2019.2
 pywin32==224
 pywinpty==0.5.5
-pywr==1.3.1.dev5+g8246801
+pywr==1.4.0
 pyzmq==18.1.0
 qtconsole==4.5.5
 redis==3.3.0
