--- a/requirements.txt
+++ b/requirements.txt
@@ -1,117 +1,65 @@
-amqp==2.5.2
+astroid==2.3.3
 attrdict==2.0.1
-attrs==19.3.0
-backcall==0.1.0
-billiard==3.6.0.0
-bleach==3.1.0
-boto3==1.9.196
-botocore==1.12.253
-celery==4.4.0rc1
+boto3==1.10.8
+botocore==1.13.40
 certifi==2019.11.28
 cffi==1.13.2
 chardet==3.0.4
 Click==7.0
-colorama==0.4.3
 cryptography==2.8
 cycler==0.10.0
-Cython==0.29.13
 dash==1.7.0
 dash-bootstrap-components==0.7.2
 dash-core-components==1.6.0
-dash-cytoscape==0.1.1
-dash-daq==0.3.0
+dash-daq==0.3.1
 dash-html-components==1.0.2
 dash-renderer==1.2.2
 dash-table==4.5.1
 decorator==4.4.1
-defusedxml==0.6.0
 docutils==0.15.2
-entrypoints==0.3
-et-xmlfile==1.0.1
 Flask==1.1.1
 Flask-Compress==1.4.0
-fsspec==0.3.6
 future==0.18.2
+graphviz==0.13.2
 idna==2.8
-importlib-metadata==1.3.0
-ipykernel==5.1.3
-ipython==7.10.2
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
+isort==4.3.21
 itsdangerous==1.1.0
-jdcal==1.4.1
-jedi==0.15.1
 Jinja2==2.10.3
 jmespath==0.9.4
-jsonschema==3.2.0
-jupyter-client==5.3.3
-jupyter-console==6.0.0
-jupyter-core==4.6.1
 kiwisolver==1.1.0
-kombu==4.6.7
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 matplotlib==3.1.2
-mistune==0.8.4
-mkl-service==2.3.0
-mock==3.0.5
-more-itertools==8.0.2
-nbconvert==5.6.1
-nbformat==4.4.0
+mccabe==0.6.1
 networkx==2.4
-notebook==6.0.1
 numexpr==2.7.0
 numpy==1.17.4
-openpyxl==3.0.0
-packaging==19.2
+packaging==20.0
 pandas==0.25.3
-pandocfilters==1.4.2
-parso==0.5.2
-pickleshare==0.7.5
-plotly==4.2.1
-prometheus-client==0.7.1
-prompt-toolkit==2.0.10
-pubnub==4.1.4
+plotly==4.4.1
+pubnub==4.1.7
 pycparser==2.19
-pycryptodomex==3.8.2
-Pygments==2.5.2
+pycryptodomex==3.9.4
+pylint==2.4.4
 pyOpenSSL==19.1.0
 pyparsing==2.4.5
-PyQt5==5.12.3
-PyQt5-sip==4.19.18
-PyQtWebEngine==5.12.1
-pyrsistent==0.15.6
 PySocks==1.7.1
-python-dateutil==2.8.1
-python-dotenv==0.10.3
+python-dateutil==2.8.0
 pytz==2019.3
-pywin32==225
-pywinpty==0.5.7
-pywr==1.4.0
-pyzmq==18.1.1
-qtconsole==4.6.0
-redis==3.3.0
+pywr==1.4.1.dev27+g1fd1322
+redis==3.3.11
 requests==2.22.0
 retrying==1.3.3
-s3fs==0.3.1
 s3transfer==0.2.1
-scipy==1.3.1
+scipy==1.4.0
 seaborn==0.9.0
-Send2Trash==1.5.0
 six==1.13.0
-SQLAlchemy==1.3.12
 tables==3.6.1
-terminado==0.8.3
-testpath==0.4.4
-tornado==6.0.3
-tqdm==4.32.2
-traitlets==4.3.3
+tqdm==4.40.2
+typed-ast==1.4.0
 urllib3==1.25.7
-vine==1.3.0
-wcwidth==0.1.7
-webencodings==0.5.1
 Werkzeug==0.16.0
-widgetsnbextension==3.5.1
 win-inet-pton==1.1.0
 wincertstore==0.2
+wrapt==1.11.2
 xlrd==1.2.0
-zipp==0.6.0
