--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,37 @@
-astroid==2.3.3
-attrdict==2.0.1
-boto3==1.10.8
-botocore==1.13.40
-certifi==2019.11.28
-cffi==1.13.2
-chardet==3.0.4
 Click==7.0
-cryptography==2.8
 cycler==0.10.0
-dash==1.7.0
-dash-bootstrap-components==0.7.2
-dash-core-components==1.6.0
-dash-daq==0.3.1
+dash==1.9.0
+dash-bootstrap-components==0.8.3
+dash-core-components==1.8.0
+dash-daq==0.3.3
 dash-html-components==1.0.2
-dash-renderer==1.2.2
-dash-table==4.5.1
+dash-leaflet==0.0.3
+dash-renderer==1.2.4
+dash-table==4.6.0
 decorator==4.4.1
-docutils==0.15.2
 Flask==1.1.1
 Flask-Compress==1.4.0
 future==0.18.2
 graphviz==0.13.2
-idna==2.8
-isort==4.3.21
 itsdangerous==1.1.0
-Jinja2==2.10.3
-jmespath==0.9.4
+Jinja2==2.11.1
 kiwisolver==1.1.0
-lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
-matplotlib==3.1.2
-mccabe==0.6.1
+matplotlib==3.1.3
 networkx==2.4
-numexpr==2.7.0
-numpy==1.17.4
-packaging==20.0
-pandas==0.25.3
-plotly==4.4.1
-pubnub==4.1.7
-pycparser==2.19
-pycryptodomex==3.9.4
-pylint==2.4.4
-pyOpenSSL==19.1.0
-pyparsing==2.4.5
-PySocks==1.7.1
-python-dateutil==2.8.0
+numexpr==2.7.1
+numpy==1.18.1
+packaging==20.1
+pandas==1.0.1
+plotly==4.5.2
+pyparsing==2.4.6
+python-dateutil==2.8.1
 pytz==2019.3
-pywr==1.4.1.dev27+g1fd1322
-redis==3.3.11
-requests==2.22.0
+pywr==1.5.0
 retrying==1.3.3
-s3transfer==0.2.1
-scipy==1.4.0
-seaborn==0.9.0
-six==1.13.0
+scipy==1.4.1
+six==1.14.0
 tables==3.6.1
-tqdm==4.40.2
-typed-ast==1.4.0
-urllib3==1.25.7
-Werkzeug==0.16.0
-win-inet-pton==1.1.0
-wincertstore==0.2
-wrapt==1.11.2
+tqdm==4.43.0
+Werkzeug==1.0.0
 xlrd==1.2.0
