--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+astroid==2.3.3
 Click==7.0
+colorama==0.4.3
 cycler==0.10.0
 dash==1.9.0
 dash-bootstrap-components==0.8.3
@@ -13,17 +15,21 @@ Flask==1.1.1
 Flask-Compress==1.4.0
 future==0.18.2
 graphviz==0.13.2
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.1
 kiwisolver==1.1.0
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 matplotlib==3.1.3
+mccabe==0.6.1
 networkx==2.4
 numexpr==2.7.1
 numpy==1.18.1
 packaging==20.1
 pandas==1.0.1
 plotly==4.5.2
+pylint==2.4.4
 pyparsing==2.4.6
 python-dateutil==2.8.1
 pytz==2019.3
@@ -34,5 +40,7 @@ seaborn==0.10.0
 six==1.14.0
 tables==3.6.1
 tqdm==4.43.0
+typed-ast==1.4.1
 Werkzeug==1.0.0
+wrapt==1.11.2
 xlrd==1.2.0
