--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.1
 kiwisolver==1.1.0
 lazy-object-proxy==1.4.3
+loguru==0.5.0
 MarkupSafe==1.1.1
 matplotlib==3.1.3
 mccabe==0.6.1
@@ -42,5 +43,6 @@ tables==3.6.1
 tqdm==4.43.0
 typed-ast==1.4.1
 Werkzeug==1.0.0
+win32-setctime==1.0.1
 wrapt==1.11.2
 xlrd==1.2.0
