--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 astroid==2.3.3
+attrs==19.3.0
+backcall==0.1.0
+bleach==3.1.5
 Click==7.0
 colorama==0.4.3
 cycler==0.10.0
@@ -11,38 +14,70 @@ dash-leaflet==0.0.3
 dash-renderer==1.2.4
 dash-table==4.6.0
 decorator==4.4.1
+defusedxml==0.6.0
+entrypoints==0.3
 Flask==1.1.1
 Flask-Compress==1.4.0
 future==0.18.2
 graphviz==0.13.2
+importlib-metadata==1.6.0
+ipykernel==5.3.0
+ipython==7.15.0
+ipython-genutils==0.2.0
 isort==4.3.21
 itsdangerous==1.1.0
+jedi==0.17.0
 Jinja2==2.11.1
+joblib==0.15.1
+jsonschema==3.2.0
+jupyter-client==6.1.3
+jupyter-core==4.6.3
 kiwisolver==1.1.0
 lazy-object-proxy==1.4.3
 loguru==0.5.0
 MarkupSafe==1.1.1
 matplotlib==3.1.3
 mccabe==0.6.1
+mistune==0.8.4
+nbconvert==5.6.1
+nbformat==5.0.6
 networkx==2.4
 numexpr==2.7.1
 numpy==1.18.1
 packaging==20.1
 pandas==1.0.1
+pandocfilters==1.4.2
+parso==0.7.0
+pickleshare==0.7.5
 plotly==4.5.2
+prometheus-client==0.8.0
+prompt-toolkit==3.0.5
+Pygments==2.6.1
 pylint==2.4.4
 pyparsing==2.4.6
+pyrsistent==0.16.0
 python-dateutil==2.8.1
 pytz==2019.3
+pywin32==227
+pywinpty==0.5.7
 pywr==1.5.0
+pyzmq==19.0.1
 retrying==1.3.3
 scipy==1.4.1
 seaborn==0.10.0
+Send2Trash==1.5.0
 six==1.14.0
 tables==3.6.1
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.4
 tqdm==4.43.0
+traitlets==4.3.3
 typed-ast==1.4.1
+wcwidth==0.2.3
+webencodings==0.5.1
 Werkzeug==1.0.0
 win32-setctime==1.0.1
 wrapt==1.11.2
 xlrd==1.2.0
+zipp==3.1.0
