--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 astroid==2.3.3
 attrs==19.3.0
 backcall==0.1.0
+bcrypt==3.1.7
 bleach==3.1.5
+cffi==1.14.0
 Click==7.0
+cloudpickle==1.4.1
 colorama==0.4.3
+cryptography==2.9.2
 cycler==0.10.0
 dash==1.9.0
 dash-bootstrap-components==0.8.3
@@ -13,13 +17,17 @@ dash-html-components==1.0.2
 dash-leaflet==0.0.3
 dash-renderer==1.2.4
 dash-table==4.6.0
+dask==2.18.1
+dask-jobqueue==0.7.1
 decorator==4.4.1
 defusedxml==0.6.0
+distributed==2.18.0
 entrypoints==0.3
 Flask==1.1.1
 Flask-Compress==1.4.0
 future==0.18.2
 graphviz==0.13.2
+HeapDict==1.0.1
 importlib-metadata==1.6.0
 ipykernel==5.3.0
 ipython==7.15.0
@@ -39,6 +47,7 @@ MarkupSafe==1.1.1
 matplotlib==3.1.3
 mccabe==0.6.1
 mistune==0.8.4
+msgpack==1.0.0
 nbconvert==5.6.1
 nbformat==5.0.6
 networkx==2.4
@@ -47,13 +56,17 @@ numpy==1.18.1
 packaging==20.1
 pandas==1.0.1
 pandocfilters==1.4.2
+paramiko==2.7.1
 parso==0.7.0
 pickleshare==0.7.5
 plotly==4.5.2
 prometheus-client==0.8.0
 prompt-toolkit==3.0.5
+psutil==5.7.0
+pycparser==2.20
 Pygments==2.6.1
 pylint==2.4.4
+PyNaCl==1.4.0
 pyparsing==2.4.6
 pyrsistent==0.16.0
 python-dateutil==2.8.1
@@ -61,15 +74,20 @@ pytz==2019.3
 pywin32==227
 pywinpty==0.5.7
 pywr==1.5.0
+PyYAML==5.3.1
 pyzmq==19.0.1
 retrying==1.3.3
 scipy==1.4.1
+scp==0.13.2
 seaborn==0.10.0
 Send2Trash==1.5.0
 six==1.14.0
+sortedcontainers==2.2.2
 tables==3.6.1
+tblib==1.6.0
 terminado==0.8.3
 testpath==0.4.4
+toolz==0.10.0
 tornado==6.0.4
 tqdm==4.43.0
 traitlets==4.3.3
@@ -80,4 +98,5 @@ Werkzeug==1.0.0
 win32-setctime==1.0.1
 wrapt==1.11.2
 xlrd==1.2.0
+zict==2.0.0
 zipp==3.1.0
