--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,36 @@
 backcall==0.2.0
+botocore==1.17.30
+Brotli==1.0.7
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
 colorama==0.4.3
 cycler==0.10.0
 Cython==0.29.20
+dash==1.13.3
+dash-bootstrap-components==0.10.2
+dash-core-components==1.10.1
+dash-daq==0.5.0
+dash-html-components==1.0.3
+dash-leaflet==0.0.18
+dash-renderer==1.5.0
+dash-table==4.8.1
 decorator==4.4.2
+docutils==0.15.2
+et-xmlfile==1.0.1
+Flask==1.1.2
+Flask-Compress==1.5.0
+future==0.18.2
 graphviz==0.14
+hydroeval==0.0.3
+idna==2.10
 ipython==7.15.0
 ipython-genutils==0.2.0
+itsdangerous==1.1.0
+jdcal==1.4.1
 jedi==0.17.0
 Jinja2==2.11.2
+jmespath==0.10.0
 joblib==0.15.1
 kiwisolver==1.2.0
 loguru==0.5.1
@@ -16,21 +39,28 @@ matplotlib==3.2.1
 networkx==2.4
 numexpr==2.7.1
 numpy==1.18.5
+openpyxl==3.0.3
 packaging==20.4
 pandas==1.0.4
 parso==0.7.0
 pickleshare==0.7.5
+plotly==4.8.1
 prompt-toolkit==3.0.5
 Pygments==2.6.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
 pywr==1.7.0
+retrying==1.3.3
+s3transfer==0.3.3
 scipy==1.4.1
+seaborn==0.10.1
 six==1.15.0
 tables==3.6.1
 tqdm==4.46.1
 traitlets==4.3.3
+urllib3==1.25.10
 wcwidth==0.2.4
+Werkzeug==1.0.1
 win32-setctime==1.0.1
 xlrd==1.2.0
