--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,108 @@
+argon2-cffi==20.1.0
 astroid==2.4.2
+async-generator==1.10
+attrs==20.3.0
 backcall==0.2.0
+bleach==3.3.0
+Brotli==1.0.9
 certifi==2020.6.20
+cffi==1.14.4
+click==7.1.2
 colorama==0.4.4
 cycler==0.10.0
+dash-core-components==1.13.0
+dash-daq==0.5.0
+dash-html-components==1.1.1
+dash-leaflet==0.1.8
+dash-renderer==1.8.3
+dash-table==4.11.0
 decorator==4.4.2
+defusedxml==0.6.0
+entrypoints==0.3
+et-xmlfile==1.0.1
+Flask-Compress==1.8.0
+future==0.18.2
+geobuf==1.1.1
 graphviz==0.14.2
+hydroeval==0.0.3
+importlib-metadata==3.4.0
+ipykernel==5.4.3
 ipython==7.18.1
 ipython-genutils==0.2.0
+ipywidgets==7.6.3
 isort==5.6.4
+itsdangerous==1.1.0
+jdcal==1.4.1
 jedi==0.17.2
 Jinja2==2.11.2
 joblib==0.17.0
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.11
+jupyter-console==6.2.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
 kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
 loguru==0.5.3
 MarkupSafe==1.1.1
 matplotlib==3.3.2
 mccabe==0.6.1
+mistune==0.8.4
+nbclient==0.5.2
+nbconvert==6.0.7
+nbformat==5.1.2
+nest-asyncio==1.5.1
 networkx==2.5
+notebook==6.2.0
 numexpr==2.7.1
 numpy==1.19.2
+openpyxl==3.0.5
 packaging==20.4
 pandas==1.1.3
+pandocfilters==1.4.3
 parso==0.7.1
 pickleshare==0.7.5
 Pillow==7.2.0
+prometheus-client==0.9.0
 prompt-toolkit==3.0.8
+protobuf==3.14.0
+pwlf==2.0.4
+pycparser==2.20
+pyDOE==0.3.8
 Pygments==2.7.1
 pylint==2.6.0
 pyparsing==2.4.7
+pyrsistent==0.17.3
 python-dateutil==2.8.1
 python-dotenv==0.14.0
 pytz==2020.1
+pywin32==300
+pywinpty==0.5.7
 pywr==1.8.0
+pyzmq==22.0.2
+qtconsole==5.0.2
+QtPy==1.9.0
+retrying==1.3.3
 scipy==1.5.2
+seaborn==0.11.0
+Send2Trash==1.5.0
 six==1.15.0
 tables==3.6.1
+terminado==0.9.2
+testpath==0.4.4
 toml==0.10.1
+tornado==6.1
 tqdm==4.50.2
 traitlets==5.0.4
 typed-ast==1.4.1
+typing-extensions==3.7.4.3
 wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
 win32-setctime==1.0.3
 wrapt==1.12.1
 xlrd==1.2.0
+zipp==3.4.0
