--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 astroid==2.4.2
+asttokens==2.0.5
 backcall==0.2.0
 certifi==2020.6.20
 colorama==0.4.4
 cycler==0.10.0
 decorator==4.4.2
+executing==0.8.3
+fonttools==4.33.3
 graphviz==0.14.2
 ipython==7.31.1
 ipython-genutils==0.2.0
@@ -16,6 +19,7 @@ lazy-object-proxy==1.4.3
 loguru==0.5.3
 MarkupSafe==1.1.1
 matplotlib==3.3.2
+matplotlib-inline==0.1.3
 mccabe==0.6.1
 networkx==2.5
 numexpr==2.7.1
@@ -26,6 +30,9 @@ parso==0.7.1
 pickleshare==0.7.5
 Pillow==9.0.1
 prompt-toolkit==3.0.8
+pure-eval==0.2.2
+pwlf==2.2.1
+pyDOE==0.3.8
 Pygments==2.7.4
 pylint==2.6.0
 pyparsing==2.4.7
@@ -35,6 +42,7 @@ pytz==2020.1
 pywr==1.8.0
 scipy==1.5.2
 six==1.15.0
+stack-data==0.3.0
 tables==3.6.1
 toml==0.10.1
 tqdm==4.50.2
